Update to use Jdk 11
Issue-Id: ACUMOS-3384

Signed-off-by: justin14 <justin.early@est.tech>
Change-Id: I91a6493bdd0d6836ba385dc94f98aa3cc1b8da1a